Change ports for HTTP server

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -36,3 +36,16 @@ autorestart=false
 [program:firefox]
 command=firefox https://github.com/SimpleMethod
 autorestart=false
+
+[program:firefox]
+command=firefox localhost
+autorestart=false
+
+[program:nginx]
+command=nginx -g 'daemon off;'
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+autorestart=false
+startretries=0
