--- a/supervisord.conf
+++ b/supervisord.conf
@@ -10,7 +10,7 @@ command=/usr/bin/x11vnc -xkb -noxrecord -noxfixes -noxdamage -display :0 -nopw -
 autorestart=true
 
 [program:novnc]
-command=/root/noVNC/utils/launch.sh --vnc localhost:5900 --listen 8080
+command=/root/noVNC/utils/launch.sh --vnc localhost:5900 --listen 8443 --cert /etc/cert.pem
 autorestart=true
 
 [program:socat]
